src/style/_game.scss
.game-stake {
    display: flex;
    flex-direction: column;
    gap: 8px;

    letter-spacing: 0.1em;
}

.game-stake__title {
    font-size: 12px;
}

.game-stake__value {
    font-size: 15px;
}

.new-game .page-container__content,
.game .page-container__content {
    display: flex;
    justify-content: space-between;
    max-width: 100%;
    padding: 0;
}

.game .page-container__content {
    height: calc(100% - 83px);
}

.delimiter {
    flex: 1;
    height: 100%;

    background-color: white;
}

.game-board {
    display: flex;
    flex-direction: column;
    gap: 5px;
    align-items: center;
    width: calc(50% - 3px);
    padding-top: 17px;
}

.game-board__row {
    display: flex;
    gap: 5px;
    justify-content: center;
    width: 100%;
}

.game-board__cell {
    width: 34px;
    height: 34px;

    &--hit,
    &--miss {
        border: 4px solid #e5e5e5;
    }

    &--hit {
        background-color: red;
    }

    &--miss {
        background-color: #9b9b9b;
    }
}

.game-board__placement {
    display: flex;
    flex-direction: column;
    gap: 5px;
    align-items: center;
    width: 100%;
    margin-top: 16px;
}

.game-board__placement__title {
    font-size: 14px;
}

.game-board__placement__inventory {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    width: calc(100% - 30px);
    height: 100px;
    padding: 10px;
    overflow-y: scroll;

    border: 4px solid white;
}

.game-board__placement__submit {
    margin-top: 7px;

    font-size: 12px;

    cursor: pointer;

    &:hover {
        color: red;
        /* stylelint-disable-next-line plugin/no-low-performance-animation-properties */
        transition: color 0.3s ease-in-out;
    }
}

